Use JVM 25